[gd_scene load_steps=7 format=3 uid="uid://c4tpi83r71ldm"]

[ext_resource type="Theme" uid="uid://5os27plblg4t" path="res://resources/ui/theme.tres" id="1_211cs"]
[ext_resource type="StyleBox" uid="uid://c41ikuoc2xqi2" path="res://resources/ui/panel_0.tres" id="2_b03nv"]
[ext_resource type="StyleBox" uid="uid://baihiuteq2brc" path="res://resources/ui/panel_bg_outline.tres" id="2_cqxas"]
[ext_resource type="PackedScene" uid="uid://c4gm6t7577hbt" path="res://scenes/ui/gui/upgrade_path.tscn" id="2_j2skl"]
[ext_resource type="Script" uid="uid://dwku2d0674hdg" path="res://scripts/ui/upgrade_menu.gd" id="3_uofuh"]
[ext_resource type="PackedScene" uid="uid://dl8kkqt67bagk" path="res://scenes/ui/shared/carousel.tscn" id="4_m2qc7"]

[node name="UpgradeMenu" type="PanelContainer"]
offset_right = 768.0
offset_bottom = 704.0
theme = ExtResource("1_211cs")
theme_override_styles/panel = ExtResource("2_cqxas")
script = ExtResource("3_uofuh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TowerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme = ExtResource("1_211cs")
text = "TowerName"
horizontal_alignment = 1
autowrap_mode = 3

[node name="TargetingSelector" parent="VBoxContainer" instance=ExtResource("4_m2qc7")]
unique_name_in_owner = true
layout_mode = 2

[node name="UpgradePaths" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="0" parent="VBoxContainer/UpgradePaths" instance=ExtResource("2_j2skl")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_b03nv")

[node name="1" parent="VBoxContainer/UpgradePaths" instance=ExtResource("2_j2skl")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_b03nv")
